--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_maps_key">AIzaSyBQtniS0NCgJc5D5g_t_ke42u5_ttYn4Rw
-</string>
+    <string name="google_maps_key">${BuildConfig.GOOGLE_MAPS_API_KEY}</string>
 </resources>
