update gradle and hide api_key

--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="google_maps_key">${BuildConfig.GOOGLE_MAPS_API_KEY}</string>
+    <string name="google_maps_key">AIzaSyC-T1QjAYSpRBEK6scPYYiNVMucbCfLq3g</string>
 </resources>
